--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,8 @@
     "password": null,
     "database": "socialMediaDB",
     "host": "localhost",
-    "dialect": "mysql"
+    "dialect": "sqlite",
+    "storage": "./app.db"
   },
   "test": {
     "username": "root",
