--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "nodemon": "^2.0.19",
     "sequelize": "^6.21.3",
     "sequelize-cli": "^6.4.1"
+  },
+  "devDependencies": {
+    "sqlite3": "^5.0.11"
   }
 }
